--- a/ResNeSt_TransferLearning.ipynb
+++ b/ResNeSt_TransferLearning.ipynb
@@ -10,7 +10,7 @@
         "# ResNet meets Split-Attention: replication, ablation and analysis of ResNeSt\n",
         "# Transfer learning subsection\n",
         "\n",
-        "*Author: Emilie OURAOU, Cyprien QUEMENEUR, Hugo RODET*\n",
+        "*Authors: Emilie OURAOU, Cyprien QUEMENEUR, Hugo RODET*\n",
         "\n",
         "\n",
         "<img src=\"https://pytorch.org/assets/images/resnest.jpg\" alt=\"alt\" width=\"50%\"/>\n",
@@ -53,7 +53,7 @@
         "- Gluon (https://cv.gluon.ai/model_zoo/segmentation.html)\n",
         "- The first author's personal website (https://hangzhang.org/PyTorch-Encoding/model_zoo/segmentation.html)\n",
         "\n",
-        "We first test the pretrain model on a single image."
+        "We first test the pretrained model on a single image."
       ],
       "metadata": {
         "id": "99uzcBkoTOag"
@@ -228,7 +228,7 @@
       "source": [
         "We will now replicate the results of the paper for the pretrained models fine-tuned for semantic segmentation. The dataset used is ADE20K. \n",
         "\n",
-        "The original paper also include experiments on CityScapes, but contrary to what is announced we could not find the pretrained model for this dataset.\n",
+        "The original paper also includes experiments on CityScapes, but contrary to what is announced we could not find the pretrained model for this dataset.\n",
         "\n",
         "For more information on these two datasets see:\n",
         "* https://groups.csail.mit.edu/vision/datasets/ADE20K/\n",
