--- a/ResNeSt_classification.ipynb
+++ b/ResNeSt_classification.ipynb
@@ -15,7 +15,7 @@
     "### Overview\n",
     "ResNeSt is an architecture of neural networks, applied to computer vision, proposing a mix between a modern convolutive neural network (CNN), the ResNet, as well as the attention mechanism. For our final project we propose a study of the article which introduced the ResNeSts and conduct some additional analyses and ablations. This work indirectly follows our article presentation which focused on vision transformers (ViTs).\n",
     "\n",
-    "As a baseline model, a ResNeSt is trained for image classification. Thisb reproduces the experiments on the ImageNet dataset, using the pretrained models made available by the authors of the original article (all rights reserved). Furthermore, we additionaly examine the influence of the batch size on the final results and reproduce the ablation study conducted in the original article.\n",
+    "As a baseline model, a ResNeSt is trained for image classification. We reproduce the experiments on the ImageNet dataset, using the pretrained models made available by the authors of the original article (all rights reserved). Furthermore, we additionaly examine the influence of the batch size on the final results and reproduce the ablation study conducted in the original article.\n",
     "\n",
     "### Disclaimer\n",
     "A complete guideline is found in the notebook, however **the results and conclusions are found in the final report, which is written under an article format**.\n",
